--- a/interpreter/Makefile
+++ b/interpreter/Makefile
@@ -18,9 +18,11 @@ JSLIB =		wast.js
 WINMAKE =	winmake.bat
 
 DIRS =		util syntax binary text valid runtime exec script host main
+# $(ocamlfind query z3)
 LIBS =		bigarray
+PKGS =		z3
 FLAGS = 	-cflags '-w +a-4-27-42-44-45 -warn-error +a'
-OCB =		ocamlbuild $(FLAGS) $(DIRS:%=-I %) $(LIBS:%=-libs %)
+OCB =		ocamlbuild $(FLAGS) $(DIRS:%=-I %) $(LIBS:%=-libs %) $(PKGS:%=-pkgs %)
 JS =		# set to JS shell command to run JS tests
 
 
